# RayCs

./: CMakeLists.txt  README.md
docs/: conf.py  examples.rst  index.rst  installation.rst  overview.rst
docs/_build/doctrees/: api.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  overview.doctree  physics.doctree  references.doctree  usage.doctree
docs/_build/html/: .buildinfo  api.html  examples.html  genindex.html  index.html  installation.html  objects.inv  overview.html  physics.html  references.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: api.rst.txt  physics.rst.txt  references.rst.txt  usage.rst.txt
docs/_build/html/_static/: alabaster.css
examples/cylinder_scattering/: README_EX.md  cylinder_scattering.py  generate_cylinder.py  rcs_0deg.csv  rcs_30deg.csv  rcs_45deg.csv
examples/sphere_scattering/: README.md  README_EX.md  generate_sphere.py  obj_to_cgns.py  plot_rcs.py  rcs_0deg.csv  rcs_30deg.csv  rcs_45deg.csv  rcs_analytical.csv  rcs_po.csv  run_simulation.sh  sphere.cgns  sphere_scattering.py
python/: pyproject.toml
python/src/raycs/: __init__.py  visualize.py
python/src/raycs/_core/: bindings.cpp
python/src/raycs/examples/: cylinder.py  sphere.py
python/tests/: conftest.py  test_bvh.py  test_config.py  test_mesh.py  test_result.py  test_solver.py  test_vec3.py  test_visualize.py
src/: bvh.cpp  bvh.hpp  cgns_mesh.cpp  cgns_mesh.hpp  config.hpp  main.cpp  mat3.hpp  mesh.hpp  po.cpp  po.hpp  ray.hpp  rcs.cpp  rcs.hpp  sbr.cpp  sbr.hpp  vec3.hpp
